formatted helper.js

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -21,6 +21,7 @@
 		<script src="Tree.js"></script>
 		<script src="Main.js"></script>
 		<script type="text/javascript">
+		<!-- some testing code --/>
 			Debugger.log("creating nodes");
 			var node1 = new Vis2Node();
 			node1.name = "node1";
