--- a/IVCMT.html
+++ b/IVCMT.html
@@ -20,7 +20,7 @@
 		<script src="Vis2Helper.js"></script>
 		<script src="Vis2Node.js"></script>
 		<script src="Vis2ParseFile.js"></script>
-		<script src="Main.js"></script>
+		<script src="Vis2Canvas.js"></script>
 		<script type="text/javascript">
 		<!-- some testing code --/>
 			Debugger.log("creating nodes");
