implemented an algorithm that is needed for drawing a tree

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -42,6 +42,8 @@
 			Debugger.log(node3.name+": parent: "+node3.parent.name);
 			
 			var tree = ParseFile('test');
+			
+			tree.BuildNeededSpace();
 		
 		</script>
 	</head>
