tree is now drawn to the canvas correctly; still some corrections for nicer view are needed

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -41,9 +41,9 @@
 			Debugger.log(node2.name+": parent: "+node2.parent.name);
 			Debugger.log(node3.name+": parent: "+node3.parent.name);
 			
-			var tree = ParseFile('test');
+			var tree1 = ParseFile('test');
 			
-			tree.BuildNeededSpace();
+			tree1.BuildNeededSpace();
 		
 		</script>
 	</head>
