--- a/IVCMT.html
+++ b/IVCMT.html
@@ -20,10 +20,11 @@
 		<script src="Vis2Helper.js"></script>
 		<script src="Vis2Node.js"></script>
 		<script src="Vis2ParseFile.js"></script>
-		<script src="Vis2Canvas.js"></script>
+		<script src="Vis2LeafMeasures.js"></script>
+		<!-- <script src="Vis2Canvas.js"></script>  -->
 		<script type="text/javascript">
 		<!-- some testing code --/>
-			var node1 = new Vis2Node();
+			/*var node1 = new Vis2Node();
 			var node2 = new Vis2Node();
 			var node3 = new Vis2Node();
 			node1.name = "node1";
@@ -39,11 +40,24 @@
 			
 			//Debugger.log(node1.name+": parent: "+node1.parent.name);
 			Debugger.log(node2.name+": parent: "+node2.parent.name);
-			Debugger.log(node3.name+": parent: "+node3.parent.name);
+			Debugger.log(node3.name+": parent: "+node3.parent.name);*/
 			
-			var tree1 = ParseFile('test');
 			
-			tree1.BuildNeededSpace();
+			var sTestTreeCompact1 = '[1;[2;[1;"A"][1;"B"]][2;[1;"C"][1;"D"]][2;[1;"E"][1;"F"]]][3;"G"]';
+			var sTestTreeCompact2 = '[1;[2;[1;"A"][1;"B"]][2;[1;"G"][1;"D"]][2;[1;"E"][1;"F"]]][3;"C"]';
+			var sTestTreeCompact3 = '[1;[2;[1;"H"][1;"L"]][2;[1;"A"][1;"B"]][2;[1;"W"][1;"X"]]][3;"Z"]';
+			
+			Debugger.log(Vis2LeafMeasures(ParseString(sTestTreeCompact1), 
+							ParseString(sTestTreeCompact2)));
+			
+			Debugger.log(Vis2LeafMeasures(ParseString(sTestTreeCompact1), 
+					ParseString(sTestTreeCompact3)));
+			
+			Debugger.log(Vis2LeafMeasures(ParseString(sTestTreeCompact2), 
+					ParseString(sTestTreeCompact3)));
+			/*var tree1 = ParseFile('test');
+			
+			tree1.BuildNeededSpace();*/
 		
 		</script>
 	</head>
