--- a/IVCMT.html
+++ b/IVCMT.html
@@ -21,7 +21,7 @@
 		<script src="Vis2Node.js"></script>
 		<script src="Vis2ParseFile.js"></script>
 		<script src="Vis2LeafMeasures.js"></script>
-		<!-- <script src="Vis2Canvas.js"></script>  -->
+		<script src="Vis2Canvas.js"></script>
 		<script type="text/javascript">
 		<!-- some testing code --/>
 			/*var node1 = new Vis2Node();
@@ -55,10 +55,6 @@
 			
 			Debugger.log(Vis2LeafMeasures(ParseString(sTestTreeCompact2), 
 					ParseString(sTestTreeCompact3)));
-			/*var tree1 = ParseFile('test');
-			
-			tree1.BuildNeededSpace();*/
-		
 		</script>
 	</head>
 	<body>
