--- a/IVCMT.html
+++ b/IVCMT.html
@@ -13,7 +13,8 @@
 			}
 			body 
 			{
-				color:blue;
+				font-family: "Verdana";
+				color:black;
 			}
 		</style>
 		<script src="modernizr-2.5.3.js"></script>
@@ -21,6 +22,7 @@
 		<script src="Vis2Node.js"></script>
 		<script src="Vis2ParseFile.js"></script>
 		<script src="Vis2LeafMeasures.js"></script>
+		<script src="Vis2Views.js"></script>
 		<script src="Vis2Canvas.js"></script>
 		<script type="text/javascript">
 		<!-- some testing code --/>
@@ -63,7 +65,15 @@
 				Interactive Visual Comparison of Multiple Trees
 			</h1>
 		</header>
-		<div style="position: absolute; top: 100px; left: 50px;">
+		<div style="position: absolute; top: 200px; left: 50px;">
+			<form>
+				Select measure:
+				<select id="measure">
+					<option value="leafbased">leaf-based</option>
+					<option value="elementbased">element-based</option>
+					<option value="edgebased">edge-based</option>
+				</select>
+			</form>
 			<canvas id="canvas" width="800" height="600">
 				One does not simply use HTML5 Canvas with this browser
 			</canvas>
