renamed current canvas to Vis2RightPaneCanvas; moved EventTrigger of WindowLoaded into a new Globals file

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -11,13 +11,13 @@
 		<script src="splitter/splitter.js"></script>
 		
 		<!-- internal js files -->
-		<script src="Vis2Globals.js"></script>
 		<script src="Vis2Helper.js"></script>
+		<script src="Vis2Globals.js"></script>
 		<script src="Vis2Node.js"></script>
 		<script src="Vis2ParseFile.js"></script>
 		<script src="Vis2LeafMeasures.js"></script>
 		<script src="Vis2ViewManager.js"></script>
-		<script src="Vis2Canvas.js"></script>
+		<script src="Vis2RightPaneCanvas.js"></script>
 		
 		<link rel="stylesheet" type="text/css" href="styles.css">
 		<script src="Vis2Splitter.js"></script>
