added canvas for left middle pane

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -19,6 +19,7 @@
 		<script src="Vis2LeafMeasures.js"></script>
 		<script src="Vis2RightPaneCanvas.js"></script>
 		<script src="Vis2LeftTopPaneCanvas.js"></script>
+		<script src="Vis2LeftMiddlePaneCanvas.js"></script>
 		
 		<link rel="stylesheet" type="text/css" href="styles.css">
 		<script src="Vis2Splitter.js"></script>
@@ -90,10 +91,12 @@
 					</canvas>
 				</div>
 				<div id="LeftPaneSplitter2">
-					<div id="Left Middle Pane">
-						<p>This is the left middle pane</p>
+					<div id="LeftMiddlePane">
+						<canvas id="LeftMiddlePaneCanvas">
+							One does not simply use HTML5 Canvas with this browser
+						</canvas>
 					</div>
-					<div id="Left Bottom Pane">
+					<div id="LeftBottomPane">
 						<p>This is the left bottom pane</p>
 					</div>
 				</div>
