added canvas for left bottom pane; fixed maximum height of left top pane

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -20,6 +20,7 @@
 		<script src="Vis2RightPaneCanvas.js"></script>
 		<script src="Vis2LeftTopPaneCanvas.js"></script>
 		<script src="Vis2LeftMiddlePaneCanvas.js"></script>
+		<script src="Vis2LeftBottomPaneCanvas.js"></script>
 		
 		<link rel="stylesheet" type="text/css" href="styles.css">
 		<script src="Vis2Splitter.js"></script>
@@ -97,7 +98,9 @@
 						</canvas>
 					</div>
 					<div id="LeftBottomPane">
-						<p>This is the left bottom pane</p>
+						<canvas id="LeftBottomPaneCanvas">
+							One does not simply use HTML5 Canvas with this browser
+						</canvas>
 					</div>
 				</div>
 			</div>
