changed view structure; now there exist views which you can assign to a pane/canvas

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -5,10 +5,10 @@
 		<title>Interactive Visual Comparison of Multiple Trees</title>
 		
 		<!-- external libs -->
-		<script src="modernizr-2.5.3.js"></script>
-		<script src="jscolor/jscolor.js"></script>
-		<script src="jquery/jquery.js"></script><!-- v1.3 is used because of splitter -->
-		<script src="splitter/splitter.js"></script>
+		<script src="libs/modernizr-2.5.3.js"></script>
+		<script src="libs/jscolor/jscolor.js"></script>
+		<script src="libs/jquery/jquery.js"></script><!-- v1.3 is used because of splitter -->
+		<script src="libs/splitter/splitter.js"></script>
 		
 		<!-- internal js files -->
 		<script src="Vis2Helper.js"></script>
@@ -17,10 +17,10 @@
 		<script src="Vis2Node.js"></script>
 		<script src="Vis2ParseFile.js"></script>
 		<script src="Vis2LeafMeasures.js"></script>
-		<script src="Vis2RightPaneCanvas.js"></script>
-		<script src="Vis2LeftTopPaneCanvas.js"></script>
-		<script src="Vis2LeftMiddlePaneCanvas.js"></script>
-		<script src="Vis2LeftBottomPaneCanvas.js"></script>
+		<script src="Views/Vis2ComparisonOverview.js"></script>
+		<script src="Views/Vis2ReferenceTreeView.js"></script>
+		<script src="Views/Vis2ScoreDistributionView.js"></script>
+		<script src="Views/Vis2TreeComparisonView.js"></script>
 		
 		<link rel="stylesheet" type="text/css" href="styles.css">
 		<script src="Vis2Splitter.js"></script>
