Fixed leaf measure

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -50,14 +50,14 @@
 			var sTestTreeCompact2 = '[1;[2;[1;"A"][1;"B"]][2;[1;"G"][1;"D"]][2;[1;"E"][1;"F"]]][3;"C"]';
 			var sTestTreeCompact3 = '[1;[2;[1;"H"][1;"L"]][2;[1;"A"][1;"B"]][2;[1;"W"][1;"X"]]][3;"Z"]';
 
-			Debugger.log(Vis2LeafMeasures(ParseString(sTestTreeCompact1), 
+			/*Debugger.log(Vis2LeafMeasures(ParseString(sTestTreeCompact1), 
 							ParseString(sTestTreeCompact2)));
 
 			Debugger.log(Vis2LeafMeasures(ParseString(sTestTreeCompact1), 
 					ParseString(sTestTreeCompact3)));
 
 			Debugger.log(Vis2LeafMeasures(ParseString(sTestTreeCompact2), 
-					ParseString(sTestTreeCompact3)));
+					ParseString(sTestTreeCompact3)));*/
 
 		</script>
 		
