Implemented element based measure

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -17,6 +17,7 @@
 		<script src="Vis2Node.js"></script>
 		<script src="Vis2ParseFile.js"></script>
 		<script src="Vis2LeafMeasures.js"></script>
+		<script src="Vis2ElementMeasure.js"></script>
 		<script src="Views/Vis2ComparisonOverview.js"></script>
 		<script src="Views/Vis2ReferenceTreeView.js"></script>
 		<script src="Views/Vis2ScoreDistributionView.js"></script>
