Tried edge measure - but incorrect values at the moment

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -11,6 +11,7 @@
 		<script src="libs/splitter/splitter.js"></script>
 		
 		<!-- internal js files -->
+		<script src="Vis2Assert.js"></script>
 		<script src="Vis2Helper.js"></script>
 		<script src="Vis2ViewManager.js"></script>
 		<script src="Vis2Globals.js"></script>
@@ -18,6 +19,7 @@
 		<script src="Vis2ParseFile.js"></script>
 		<script src="Vis2LeafMeasures.js"></script>
 		<script src="Vis2ElementMeasure.js"></script>
+		<script src="Vis2EdgeMeasure.js"></script>
 		<script src="Views/Vis2ComparisonOverview.js"></script>
 		<script src="Views/Vis2ReferenceTreeView.js"></script>
 		<script src="Views/Vis2ScoreDistributionView.js"></script>
