huge update - new ViewManager, SelectionManager, TreeManager, main-file, ComparisonOverview, ReferenceTreeView, TreeComparisonView

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -12,6 +12,7 @@
 		
 		<!-- internal js files -->
 		<script src="Vis2TreeManager.js"></script>
+		<script src="Vis2SelectionManager.js"></script>
 		<script src="Vis2Helper.js"></script>
 		<script src="Vis2ViewManager2.js"></script>
 		<script src="Vis2ViewManager.js"></script>
@@ -62,50 +63,27 @@
 		<div id="MainWindow">
 			<div id="LeftPaneSplitter1"> 
 	 			<div id="LeftTopPane">
-					<canvas id="LeftTopPaneCanvas">
+					<canvas>
 						One does not simply use HTML5 Canvas with this browser
 					</canvas>
 				</div>
 				<div id="LeftPaneSplitter2">
 					<div id="LeftMiddlePane">
-						<canvas id="LeftMiddlePaneCanvas">
+						<canvas>
 							One does not simply use HTML5 Canvas with this browser
 						</canvas>
 					</div>
 					<div id="LeftBottomPane">
-						<canvas id="LeftBottomPaneCanvas">
+						<canvas>
 							One does not simply use HTML5 Canvas with this browser
 						</canvas>
 					</div>
 				</div>
 			</div>
 			<div id="RightPane">
-				<div id="RightLeftPane">
-					<div id="RightLeftTopPane">
-						<canvas id="RightLeftTopPaneCanvas">
-							One does not simply use HTML5 Canvas with this browser
-						</canvas>
-					</div>
-					<div id="RightLeftBottomPane">
-						<canvas id="RightLeftBottomPaneCanvas">
-							One does not simply use HTML5 Canvas with this browser
-						</canvas>
-					</div>
-					</div>
-				</div>
-				<div id="RightRightPane">
-					<div id="RightRightTopPane">
-						<canvas id="RightRightTopPaneCanvas">
-							One does not simply use HTML5 Canvas with this browser
-						</canvas>
-					</div>
-					<div id="RightRightBottomPane">
-						<canvas id="RightRightBottomPaneCanvas">
-							One does not simply use HTML5 Canvas with this browser
-						</canvas>
-					</div>
-					</div>
-				</div>
+				<canvas>
+					One does not simply use HTML5 Canvas with this browser
+				</canvas>
 			</div> 
 		</div> <!-- #MainWindow -->
 	</body>
