Created Vis2ColorMap for colormap handling, changed color interpolation to color1->color2 (previous: color1->white->color2), removed old ViewManager

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -14,8 +14,8 @@
 		<script src="Vis2TreeManager.js"></script>
 		<script src="Vis2SelectionManager.js"></script>
 		<script src="Vis2Helper.js"></script>
+		<script src="Vis2ColorMap.js"></script>
 		<script src="Vis2ViewManager2.js"></script>
-		<script src="Vis2ViewManager.js"></script>
 		<script src="Vis2Globals.js"></script>
 		<script src="Vis2Node.js"></script>
 		<script src="Vis2ParseFile.js"></script>
