added selection rectangle (no effect atm) to reference view, moved node-drawing-stuff in Vis2NodeVisualizer class

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -14,6 +14,7 @@
 		<script src="Vis2TreeManager.js"></script>
 		<script src="Vis2SelectionManager.js"></script>
 		<script src="Vis2Helper.js"></script>
+		<script src="Vis2NodeVisualizer.js"></script>
 		<script src="Vis2ColorMap.js"></script>
 		<script src="Vis2ViewManager2.js"></script>
 		<script src="Vis2Globals.js"></script>
