--- a/IVCMT.html
+++ b/IVCMT.html
@@ -16,7 +16,7 @@
 		<script src="Vis2Helper.js"></script>
 		<script src="Vis2NodeVisualizer.js"></script>
 		<script src="Vis2ColorMap.js"></script>
-		<script src="Vis2ViewManager2.js"></script>
+		<script src="Vis2ViewManager.js"></script>
 		<script src="Vis2Globals.js"></script>
 		<script src="Vis2Node.js"></script>
 		<script src="Vis2ParseFile.js"></script>
