created basic structure for the score distribution view - computed rows and cols for a fixed histogram size, added scrollbar for y-direction

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -54,7 +54,7 @@
 							One does not simply use HTML5 Canvas with this browser
 						</canvas>
 					</div>
-					<div id="RightPane">
+					<div id="ScoreDistributionPane">
 						<canvas>
 							One does not simply use HTML5 Canvas with this browser
 						</canvas>
