fixed colors of the upper numbers in the overview; added some color-retrieval-methods in Vis2ColorMap

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -47,7 +47,7 @@
 			</form>
 		</div>
 		<div id='content'>
-			<div id='jqxSplitter' style="width: auto; height: auto; background-color: #FFFFAF">
+			<div id='jqxSplitter' style="width: auto; height: auto; background-color: #FFFFFF">
 				<div id="jqxSplitter2" style="background-color: red; height: 100%">
 					<div id="ComparisonOverviewPane">
 						<canvas>
