Added help window

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -37,7 +37,8 @@
 
 	</head>
 	<body class='default'>
-		<div id="userinterface">
+		<a id="show_help_link" href="javascript: window.ViewManager.ShowHelpWindow()">Show Help</a>
+		<!--<div id="userinterface">
 			<form>
 				Select color 1:
 				<input class="color" id="color1" value="0000ff"/>
@@ -45,7 +46,7 @@
 				Select color 2:
 				<input class="color" id="color2" value="ff0000"/>
 			</form>
-		</div>
+		</div>-->
 		<div id='content'>
 			<div id='jqxSplitter' style="width: auto; height: auto; background-color: #FFFFFF">
 				<div id="jqxSplitter2" style="background-color: red; height: 100%">
@@ -80,7 +81,37 @@
 					</div>
 				</div>
 			</div>
+			
 		</div>
-
+		<div id="help" style="position: absolute; float: left; left: 240px; top: 10px; height: 800px; width: 800px; background-color: red;">
+			<a href="javascript:window.ViewManager.HideHelpWindow()">Hide Help</a>
+				 <h1>Help</h1>
+				 <h2>How to use this program</h2>
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 <h2>Other blabla</h2>
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			</div>
 	</body>
 </html>
