Added links to show/hide

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -37,7 +37,6 @@
 
 	</head>
 	<body class='default'>
-		<a id="show_help_link" href="javascript: window.ViewManager.ShowHelpWindow()">Show Help</a>
 		<!--<div id="userinterface">
 			<form>
 				Select color 1:
@@ -83,7 +82,7 @@
 			</div>
 			
 		</div>
-		<div id="help" style="position: absolute; float: left; left: 240px; top: 10px; height: 800px; width: 800px; background-color: red;">
+		<div id="help" style="position: absolute; float: left; left: 210px; top: 10px; height: 800px; width: 800px; background-color: white">
 			<a href="javascript:window.ViewManager.HideHelpWindow()">Hide Help</a>
 				 <h1>Help</h1>
 				 <h2>How to use this program</h2>
