--- a/IVCMT.html
+++ b/IVCMT.html
@@ -26,7 +26,7 @@
 		<script src="Vis2Globals.js"></script>
 		<script src="Vis2Node.js"></script>
 		<script src="Vis2ParseFile.js"></script>
-		<script src="Vis2LeafMeasures.js"></script>
+		<script src="Vis2LeafMeasure.js"></script>
 		<script src="Vis2ElementMeasure.js"></script>
 		<script src="Vis2EdgeMeasure.js"></script>
 		<script src="Views/Vis2ComparisonOverview.js"></script>
