Attached help window to #docking window with a few hacks (on specific events, left/top is read from #docking and set to #help)

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -90,7 +90,7 @@
 			</div>
 			
 		</div>
-		<div id="help" style="position: absolute; float: left; left: 210px; top: 10px; height: 800px; width: 800px; background-color: white">
+		<div id="help" style="position: absolute; float: left; background-color: red">
 			<a href="javascript:window.ViewManager.HideHelpWindow()">Hide Help</a>
 				 <h1>Help</h1>
 				 <h2>How to use this program</h2>
