--- a/IVCMT.html
+++ b/IVCMT.html
@@ -38,20 +38,56 @@
 	</head>
 	<body class='default'>
 		<!--<div id="userinterface">
-			<form>
-				Select color 1:
-				<input class="color" id="color1" value="0000ff"/>
-				<br>
-				Select color 2:
-				<input class="color" id="color2" value="ff0000"/>
-			</form>
+		<form>
+		Select color 1:
+		<input class="color" id="color1" value="0000ff"/>
+		<br>
+		Select color 2:
+		<input class="color" id="color2" value="ff0000"/>
+		</form>
 		</div>-->
-		Measure:
-		<select id="measure-select" onchange='window.TreeManager.SetGlobalMeasure(this.options[this.selectedIndex].value)'>
-		<option value="leaf" selected="selected">leaf-based</option>
-		<option value="element">element-based</option>
-		<option value="edge">edge-based</option>
-		</select>
+		<div id="settings">
+			<table class="settings_structure">
+				<tr>
+					<td>
+					<table class="settings_structure">
+						<tr>
+							<td>Select Measure: </td>
+							<td>
+							<select id="measure-select" onchange='window.TreeManager.SetGlobalMeasure(this.options[this.selectedIndex].value)'>
+								<option value="leaf" selected="selected">leaf-based</option>
+								<option value="element">element-based</option>
+								<option value="edge">edge-based</option>
+							</select></td>
+						</tr>
+						<tr>
+							<td>Automatic threshold: </td>
+							<td>
+							<select id="threshold-select" onchange='window.TreeManager.SetThreshold(this.options[this.selectedIndex].value)'>
+								<option value="1.0">1.0</option>
+								<option value="0.9">0.9</option>
+								<option value="0.8">0.8</option>
+								<option value="0.7">0.7</option>
+								<option value="0.6">0.6</option>
+								<option value="0.5">0.5</option>
+								<option value="0.4">0.4</option>
+								<option value="0.3">0.3</option>
+								<option value="0.2">0.2</option>
+								<option value="0.1">0.1</option>
+								<option value="0.0" selected="selected">0.0</option>
+							</select></td>
+						</tr>
+					</table></td>
+					<td style="text-align: right">
+						<h1>Vis2: Interactive Visual Comparison of Multiple Trees</h1>
+						<span class="info">Florian Spechtenhauser 0xxxxxxx, Christian Möllinger 0725979 / <a id="show_help_link" href="javascript: window.ViewManager.ShowHelpWindow()">show help</a></span>
+					</td>
+				</tr>
+			</table>
+
+			
+		</div>
+
 		<div id='content'>
 			<div id='jqxSplitter' style="width: auto; height: auto; background-color: #FFFFFF">
 				<div id="jqxSplitter2" style="background-color: red; height: 100%">
@@ -86,37 +122,37 @@
 					</div>
 				</div>
 			</div>
-			
+
 		</div>
 		<div id="help" style="position: absolute; float: left; background-color: red">
 			<a href="javascript:window.ViewManager.HideHelpWindow()">Hide Help</a>
-				 <h1>Help</h1>
-				 <h2>How to use this program</h2>
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 <h2>Other blabla</h2>
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-				 Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-			</div>
+			<h1>Help</h1>
+			<h2>How to use this program</h2>
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			<h2>Other blabla</h2>
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+		</div>
 	</body>
 </html>
