--- a/IVCMT.html
+++ b/IVCMT.html
@@ -37,15 +37,6 @@
 
 	</head>
 	<body class='default'>
-		<!--<div id="userinterface">
-		<form>
-		Select color 1:
-		<input class="color" id="color1" value="0000ff"/>
-		<br>
-		Select color 2:
-		<input class="color" id="color2" value="ff0000"/>
-		</form>
-		</div>-->
 		<div id="settings">
 			<table class="settings_structure">
 				<tr>
@@ -64,17 +55,17 @@
 							<td>Automatic threshold: </td>
 							<td>
 							<select id="threshold-select" onchange='window.TreeManager.SetThreshold(this.options[this.selectedIndex].value)'>
-								<option value="1.0">1.0</option>
-								<option value="0.9">0.9</option>
-								<option value="0.8">0.8</option>
-								<option value="0.7">0.7</option>
-								<option value="0.6">0.6</option>
-								<option value="0.5">0.5</option>
-								<option value="0.4">0.4</option>
-								<option value="0.3">0.3</option>
-								<option value="0.2">0.2</option>
-								<option value="0.1">0.1</option>
 								<option value="0.0" selected="selected">0.0</option>
+								<option value="0.1">0.1</option>
+								<option value="0.2">0.2</option>
+								<option value="0.3">0.3</option>
+								<option value="0.4">0.4</option>
+								<option value="0.5">0.5</option>
+								<option value="0.6">0.6</option>
+								<option value="0.7">0.7</option>
+								<option value="0.8">0.8</option>
+								<option value="0.9">0.9</option>
+								<option value="1.0">1.0</option>
 							</select></td>
 						</tr>
 					</table></td>
@@ -92,7 +83,7 @@
 			<div id='jqxSplitter' style="width: auto; height: auto; background-color: #FFFFFF">
 				<div id="jqxSplitter2" style="background-color: red; height: 100%">
 					<div id="ComparisonOverviewPane">
-						<canvas>
+						<canvas id="ComparisonOverviewCanvas">
 							One does not simply use HTML5 Canvas with this browser
 						</canvas>
 					</div>
